Replace all materialize with svgs and fix spacing

--- a/app/public/stylesheet/notifModal.css
+++ b/app/public/stylesheet/notifModal.css
@@ -2,6 +2,11 @@
     border-radius: 5px;
 }
 
+#notif-modal img.center {
+    width: 24px;
+    margin-top: 10px;
+}
+
 #notif-modal .modal-header {
     height: 49px;
     background-color: #212225;
@@ -22,9 +27,8 @@
     font-size: 14px;
     color: #ffffff;
     position: absolute;
-    top: 0;
-    right: 0;
-    margin: 5px;
+    top: 3px;
+    right: 34px;
 }
 
 #notif-modal #content {
@@ -37,6 +41,10 @@
 
 #notif-modal .modal-content .input-field {
     margin-top: 0;
+}
+
+#notif-modal .s1 {
+    text-align: center;
 }
 
 #notif-modal .modal-content .dropdown-content li>span {
